--- a/block-templates/author.html
+++ b/block-templates/author.html
@@ -1,19 +1,23 @@
 <!-- wp:planet4-blocks/framework -->
-<!-- wp:query {"queryId":1,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"displayLayout":{"type":"flex","columns":3}} -->
-<div class="wp-block-query"><!-- wp:post-template -->
-	<!-- wp:post-featured-image /-->
+<!-- wp:group {"className":"container"} -->
+<div class="wp-block-group container">
+	<!-- wp:post-author {"showAvatar":false,"showBio":true,"fontSize":"medium"} /-->
+	<!-- wp:query {"queryId":1,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"displayLayout":{"type":"flex","columns":3}} -->
+	<div class="wp-block-query"><!-- wp:post-template -->
+		<!-- wp:post-featured-image /-->
 
-	<!-- wp:post-date /-->
+		<!-- wp:post-date /-->
 
-	<!-- wp:post-title /-->
-	<!-- /wp:post-template -->
+		<!-- wp:post-title /-->
+		<!-- /wp:post-template -->
 
-	<!-- wp:query-pagination -->
-	<!-- wp:query-pagination-previous /-->
+		<!-- wp:query-pagination -->
+		<!-- wp:query-pagination-previous /-->
 
-	<!-- wp:query-pagination-numbers /-->
+		<!-- wp:query-pagination-numbers /-->
 
-	<!-- wp:query-pagination-next /-->
-	<!-- /wp:query-pagination --></div>
-<!-- /wp:query -->
+		<!-- wp:query-pagination-next /-->
+		<!-- /wp:query-pagination --></div>
+	<!-- /wp:query --></div>
+<!-- /wp:group -->
 <!-- /wp:planet4-blocks/framework -->
