--- a/block-templates/author.html
+++ b/block-templates/author.html
@@ -1,14 +1,14 @@
 <!-- wp:planet4-blocks/framework -->
 <!-- wp:group {"className":"container"} -->
-<div class="wp-block-group container">
-	<!-- wp:post-author {"showAvatar":false,"showBio":true,"fontSize":"medium"} /-->
+<div class="wp-block-group container"><!-- wp:post-author {"showAvatar":false,"showBio":true,"fontSize":"medium"} /-->
+
 	<!-- wp:query {"queryId":1,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"displayLayout":{"type":"flex","columns":3}} -->
 	<div class="wp-block-query"><!-- wp:post-template -->
-		<!-- wp:post-featured-image /-->
+		<!-- wp:post-featured-image {"isLink":true} /-->
 
-		<!-- wp:post-date /-->
+		<!-- wp:post-date {"isLink":true} /-->
 
-		<!-- wp:post-title /-->
+		<!-- wp:post-title {"isLink":true} /-->
 		<!-- /wp:post-template -->
 
 		<!-- wp:query-pagination -->
