--- a/block-templates/author.html
+++ b/block-templates/author.html
@@ -3,7 +3,14 @@
 <div class="wp-block-group container"><!-- wp:post-author {"showAvatar":false,"showBio":true,"fontSize":"medium"} /-->
 
 	<!-- wp:query {"queryId":1,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"displayLayout":{"type":"flex","columns":3}} -->
-	<div class="wp-block-query"><!-- wp:post-template -->
+	<div class="wp-block-query">
+		<!-- wp:query-pagination -->
+		<!-- wp:query-pagination-previous /-->
+
+		<!-- wp:query-pagination-numbers /-->
+
+		<!-- wp:query-pagination-next /-->
+		<!-- /wp:query-pagination -->	<!-- wp:post-template -->
 		<!-- wp:post-featured-image {"isLink":true} /-->
 
 		<!-- wp:post-date {"isLink":true} /-->
