--- a/block-templates/author.html
+++ b/block-templates/author.html
@@ -1,10 +1,9 @@
 <!-- wp:planet4-blocks/framework -->
 <!-- wp:group {"className":"container"} -->
-<div class="wp-block-group container"><!-- wp:post-author {"showAvatar":false,"showBio":true,"fontSize":"medium"} /-->
+<div class="wp-block-group container"><!-- wp:post-author {"avatarSize":96,"showBio":true,"className":"author-pic","fontSize":"medium"} /-->
 
 	<!-- wp:query {"queryId":1,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"displayLayout":{"type":"flex","columns":3}} -->
-	<div class="wp-block-query">
-		<!-- wp:query-pagination -->
+	<div class="wp-block-query"><!-- wp:query-pagination -->
 		<!-- wp:query-pagination-previous /-->
 
 		<!-- wp:query-pagination-numbers /-->
