--- a/block-templates/author.html
+++ b/block-templates/author.html
@@ -9,12 +9,44 @@
 		<!-- wp:query-pagination-numbers /-->
 
 		<!-- wp:query-pagination-next /-->
-		<!-- /wp:query-pagination -->	<!-- wp:post-template -->
+		<!-- /wp:query-pagination -->
+
+		<!-- wp:post-template -->
 		<!-- wp:post-featured-image {"isLink":true} /-->
 
-		<!-- wp:post-date {"isLink":true} /-->
+		<!-- wp:group {"className":"inline-container"} -->
+		<div class="wp-block-group inline-container"><!-- wp:post-terms {"term":"p4-page-type"} /-->
+
+			<!-- wp:paragraph {"style":{"typography":{"fontSize":"11px"}},"textColor":"blue"} -->
+			<p class="has-blue-color has-text-color" style="font-size:11px">●</p>
+			<!-- /wp:paragraph -->
+
+			<!-- wp:post-terms {"term":"post_tag"} /--></div>
+		<!-- /wp:group -->
+
+		<!-- wp:columns -->
+		<div class="wp-block-columns"><!-- wp:column {"width":"50%"} -->
+			<div class="wp-block-column" style="flex-basis:50%"></div>
+			<!-- /wp:column -->
+
+			<!-- wp:column {"width":"50%"} -->
+			<div class="wp-block-column" style="flex-basis:50%"></div>
+			<!-- /wp:column --></div>
+		<!-- /wp:columns -->
 
 		<!-- wp:post-title {"isLink":true} /-->
+
+		<!-- wp:group {"className":"inline-container"} -->
+		<div class="wp-block-group inline-container"><!-- wp:post-date {"isLink":true} /-->
+
+			<!-- wp:paragraph -->
+			<p>-</p>
+			<!-- /wp:paragraph -->
+
+			<!-- wp:paragraph -->
+			<p>5 min read</p>
+			<!-- /wp:paragraph --></div>
+		<!-- /wp:group -->
 		<!-- /wp:post-template -->
 
 		<!-- wp:query-pagination -->
