Don't show post type on post type page
* It's all the same.

--- a/block-templates/taxonomy-p4-page-type.html
+++ b/block-templates/taxonomy-p4-page-type.html
@@ -15,11 +15,7 @@
 		<!-- wp:post-template -->
 		<!-- wp:post-featured-image {"isLink":true} /-->
 
-		<!-- wp:group {"className":"inline-container circle-separated"} -->
-		<div class="wp-block-group inline-container circle-separated"><!-- wp:post-terms {"term":"p4-page-type","style":{"typography":{"fontSize":"14px"}}} /-->
-
-			<!-- wp:post-terms {"term":"post_tag","style":{"typography":{"fontSize":"14px"}}} /--></div>
-		<!-- /wp:group -->
+		<!-- wp:post-terms {"term":"post_tag","style":{"typography":{"fontSize":"14px"}}} /-->
 
 		<!-- wp:post-title {"isLink":true,"style":{"typography":{"fontSize":"16px"}}} /-->
 
