--- a/parts/query-grid.html
+++ b/parts/query-grid.html
@@ -1,24 +1,27 @@
 <!-- wp:query { "query":{ "inherit": true }, "displayLayout": { "type": "flex", "columns":4 } } -->
 <div class="wp-block-query">
-	<!-- wp:query-pagination -->
-		<!-- wp:query-pagination-previous /-->
-		<!-- wp:query-pagination-numbers /-->
-		<!-- wp:query-pagination-next /-->
-	<!-- /wp:query-pagination -->
 
 	<!-- wp:post-template -->
-	<!-- wp:post-featured-image {"isLink":true} /-->
-	<div class="article-list-item-body">
 
-		<div class="d-flex circle-separated">
+	<div class="query-list-item-image query-list-item-image-max-width">
+		<!-- wp:post-featured-image {"isLink":true} /-->
+	</div>
+	<div class="query-list-item-body">
+
+		<div class="query-list-item-post-terms">
 			<!-- wp:post-terms {"term":"p4-page-type"} /-->
-			<!-- wp:post-terms {"term":"post_tag"} /-->
+			<div class="wrapper-post-tag">
+				<!-- wp:post-terms {"term":"post_tag"} /-->
+			</div>
 		</div>
 
-		<!-- wp:post-title {"isLink":true, "level":4, "className": "article-list-item-headline"} /-->
+		<header>
+			<!-- wp:post-title {"isLink":true, "level":4, "className": "query-list-item-headline"} /-->
+		</header>
 
-		<div class="article-list-item-meta d-flex dash-separated">
+		<div class="query-list-item-meta d-flex">
 			<!-- wp:p4/post-author-name /-->
+			<span class="query-list-item-bullet" aria-hidden="true">•</span>
 			<!-- wp:post-date /-->
 			<!-- wp:p4/reading-time /-->
 		</div>
