Follow up review
- Update HTML templates

--- a/parts/query-grid.html
+++ b/parts/query-grid.html
@@ -9,7 +9,9 @@
 	<div class="query-list-item-body">
 
 		<div class="query-list-item-post-terms">
-			<!-- wp:post-terms {"term":"p4-page-type"} /-->
+			<div class="wrapper-post-term">
+				<!-- wp:post-terms {"term":"p4-page-type"} /-->
+			</div>
 			<div class="wrapper-post-tag">
 				<!-- wp:post-terms {"term":"post_tag"} /-->
 			</div>
@@ -18,6 +20,7 @@
 		<header>
 			<!-- wp:post-title {"isLink":true, "level":4, "className": "query-list-item-headline"} /-->
 		</header>
+		<!-- wp:post-excerpt {"className": "query-list-item-content"} /-->
 
 		<div class="query-list-item-meta d-flex">
 			<!-- wp:p4/post-author-name /-->
