--- a/parts/query-grid.html
+++ b/parts/query-grid.html
@@ -1,5 +1,5 @@
 <!-- wp:query { "query":{ "inherit": true }, "displayLayout": { "type": "flex", "columns":4 } } -->
-<div class="wp-block-query">
+<div class="wp-block-query wp-block-query--grid">
 
 	<!-- wp:post-template -->
 
@@ -22,7 +22,7 @@
 		</header>
 		<!-- wp:post-excerpt {"className": "query-list-item-content"} /-->
 
-		<div class="query-list-item-meta d-flex">
+		<div class="query-list-item-meta d-flex flex-wrap">
 			<!-- wp:p4/post-author-name /-->
 			<span class="query-list-item-bullet" aria-hidden="true">•</span>
 			<!-- wp:post-date /-->
