--- a/parts/query-list.html
+++ b/parts/query-list.html
@@ -21,7 +21,7 @@
 			</header>
 			<!-- wp:post-excerpt {"className": "query-list-item-content"} /-->
 
-			<div class="query-list-item-meta d-flex">
+			<div class="query-list-item-meta d-flex flex-wrap">
 				<!-- wp:p4/post-author-name /-->
 				<span class="query-list-item-bullet" aria-hidden="true">•</span>
 				<!-- wp:post-date /-->
