Use only one HTML template for grid/list view
This is better for performance and also simplifies the code

--- a/parts/query-listing-page.html
+++ b/parts/query-listing-page.html
@@ -1,7 +1,6 @@
 <!-- wp:query { "query":{ "inherit": true } } -->
-<div class="wp-block-query wp-block-query--list">
+<div id="listing-page-content" class="wp-block-query wp-block-query--list">
 	<!-- wp:post-template -->
-	<article class="query-list-item">
 		<div class="query-list-item-image query-list-item-image-max-width">
 			<!-- wp:p4/post-featured-image /-->
 		</div>
@@ -28,7 +27,6 @@
 				<!-- wp:p4/reading-time /-->
 			</div>
 		</div>
-	</article>
 	<!-- /wp:post-template -->
 
 	<!-- wp:query-pagination -->
